# fooaudio-phonon

./: .gitignore  CMakeLists.txt  README  TODO
plugins/: fooplugininterfaces.hpp
plugins/fooalsaplugin/: Makefile  fooalsaoption.hpp  fooalsaplugin.cpp  fooalsaplugin.hpp  fooalsaplugin.pro  fooalsastruct.cpp  fooalsastruct.hpp
src/: .gitignore  CMakeLists.txt  Makefile  fooaudio.cpp  fooaudio.pro  fooaudioapp.cpp  fooaudioapp.hpp  foomainwindow.cpp  foomainwindow.hpp  fooplayer.cpp  fooplayer.hpp  fooplaylist.cpp  fooplaylist.hpp  fooplaylistmodel.cpp  fooplaylistmodel.hpp  fooplaylistview.cpp  fooplaylistview.hpp  fooplaylistwidget.cpp  fooplaylistwidget.hpp  fooplugininterfaces.hpp  footabbar.cpp  footabbar.hpp  footablewidget.cpp  footablewidget.hpp  footabwidget.cpp  footabwidget.hpp  main.cpp  moc_fooaudioapp.cpp  moc_foomainwindow.cpp  moc_fooplayer.cpp  moc_fooplaylist.cpp  moc_fooplaylistfiller.cpp  moc_fooplaylistmodel.cpp  moc_fooplaylistview.cpp  moc_fooplaylistwidget.cpp  moc_footabbar.cpp  moc_footablewidget.cpp  moc_footabwidget.cpp  qrc_resource.cpp  resource.qrc  (+2 more)
src/fooalsaplugin/: Makefile  fooalsaoption.cpp  fooalsaplugin.cpp  fooalsaplugin.hpp  fooalsaplugin.pro
src/fooaudio/: .gitignore  CMakeLists.txt  Makefile  abstractaudiointerface.h  abstractaudioplugin.cpp  abstractaudioplugin.h  fooabout.cpp  fooabout.hpp  fooapplication.cpp  fooapplication.h  fooaudio  fooaudio.cpp  fooaudio.pro  fooaudioapp.cpp  fooaudioapp.hpp  fooaudioengine.cpp  fooaudioengine.hpp  fooaudioengineplugin.cpp  fooaudioengineplugin.hpp  foochangename.cpp  foochangename.hpp  foomainwindow.cpp  foomainwindow.hpp  foometadatamanager.cpp  foometadatamanager.hpp  fooplaylistmanager.cpp  fooplaylistmanager.hpp  fooplaylistwidget.cpp  fooplaylistwidget.hpp  fooplugindialog.cpp  fooplugindialog.hpp  footabbar.cpp  footabbar.hpp  footabwidget.cpp  footabwidget.hpp  footrack.cpp  footrack.hpp  footracklist.cpp  footracklist.hpp  qrc_resource.cpp  (+3 more)
src/fooaudio/logic/: applicationlogic.cpp  applicationlogic.h  applicationlogicptr.h  logic.pro
src/fooflacplugin/: Makefile  fooflacdata.hpp  fooflacplugin.cpp  fooflacplugin.hpp  fooflacplugin.pro
src/include/: fooaudiostruct.cpp  fooaudiostruct.hpp  foodecoder.cpp  foodecoder.hpp  foofifobuf.cpp  foofifobuf.hpp  fooio.cpp  fooio.hpp  foooutbuf.cpp  foooutbuf.hpp  fooplugininterfaces.hpp  footags.h  footags.hpp
src/modules/: CMakeLists.txt  modules.pro
src/modules/PhononEngine/: phononengine.cpp  phononengine.h  phononengine.pro
src/modules/PhononEngine/tests/: tests.h  tests.pro
src/modules/phononengine/: phononengine.cpp  phononengine.h  phononplugin.pro
src/modules/phononengine/tests/: tests.cpp
src/modules/phononplugin/: CMakeLists.txt  phononengine.cpp  phononengine.h  phononplugin.cpp  phononplugin.h
src/modules/phononplugin/tests/: tests.cpp  tests.h  tests.pro
src/plugins/fooalsaplugin/: fooalsaplugin.cpp  fooalsaplugin.hpp
